# apiark

./: CLAUDE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/npm/: package.json
apps/cli/src/: collection.rs  interpolation.rs  main.rs  models.rs  reporter.rs  runner.rs
apps/desktop/: package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: ai.rs  collection.rs  cookies.rs  docs.rs  grpc.rs  http.rs  mock.rs  mod.rs  plugins.rs  proxy.rs  scheduler.rs  trash.rs  watcher.rs
apps/desktop/src-tauri/src/docs/: generator.rs  mod.rs
apps/desktop/src-tauri/src/exporter/: postman.rs
apps/desktop/src-tauri/src/grpc/: client.rs  mod.rs  proto_parser.rs  reflection.rs
apps/desktop/src-tauri/src/http/: auth_handlers.rs  cookies.rs  mod.rs  request_builder.rs  response_parser.rs
apps/desktop/src-tauri/src/importer/: postman.rs
apps/desktop/src-tauri/src/mock/: mod.rs  server.rs
apps/desktop/src-tauri/src/models/: auth.rs  collection.rs  request.rs
apps/desktop/src-tauri/src/oauth/: flow.rs
apps/desktop/src-tauri/src/plugins/: js_plugin.rs  manager.rs  mod.rs
apps/desktop/src-tauri/src/proxy/: capture.rs
apps/desktop/src-tauri/src/runner/: collection_runner.rs
apps/desktop/src-tauri/src/scheduler/: mod.rs  monitor.rs
apps/desktop/src-tauri/src/storage/: collection.rs  history.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/watcher/: collection_watcher.rs  mod.rs
apps/desktop/src-tauri/tests/: integration_tests.rs
apps/desktop/src/components/ai/: ai-assistant-dialog.tsx
apps/desktop/src/components/collection/: collection-sidebar.tsx  collection-tree.tsx  cookie-jar-dialog.tsx
apps/desktop/src/components/command-palette/: command-palette.tsx
apps/desktop/src/components/console/: console-panel.tsx
apps/desktop/src/components/docs/: docs-preview-dialog.tsx
apps/desktop/src/components/environment/: environment-selector.tsx
apps/desktop/src/components/graphql/: graphql-view.tsx
apps/desktop/src/components/grpc/: grpc-view.tsx
apps/desktop/src/components/history/: history-panel.tsx
apps/desktop/src/components/import/: import-dialog.tsx
apps/desktop/src/components/layout/: activity-bar.tsx  bottom-panel.tsx  (+3 more)
apps/desktop/src/hooks/: use-auto-save.ts  use-file-watcher.ts
apps/desktop/src/lib/: code-generators.ts  diff.ts  i18n.ts  intl.ts  tauri-api.ts
apps/desktop/src/locales/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  zh.json
apps/desktop/src/stores/: collection-store.ts  diff-store.ts  docs-store.ts  mock-store.ts  monitor-store.ts  settings-store.ts  tab-store.ts  undo-store.ts
apps/desktop/src/styles/: global.css
apps/mcp-server/: Cargo.toml
apps/vscode-extension/: package.json
apps/web/: .gitignore  package.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: app-mockup.tsx  comparison-table.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  performance.tsx  protocols.tsx  video-demo.tsx
apps/web/src/remotion/: ApiArkDemo.tsx
(+32 files in other folders)
