[package]
name = "apiark-mcp"
version = "0.2.1"
description = "ApiArk MCP server — AI editor integration for API collections"
authors = ["ApiArk Contributors"]
edition = "2021"

[[bin]]
name = "apiark-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
url = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
