[package]
name = "apiark"
version = "0.2.5"
description = "Local-first API development platform"
authors = ["ApiArk Contributors"]
edition = "2021"

[lib]
name = "apiark_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "apiark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "multipart", "stream"] }
url = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
rquickjs = { version = "0.9", features = ["parallel", "loader"] }
dirs = "5"
csv = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
axum = "0.7"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
hmac = "0.12"
md-5 = "0.10"
jsonwebtoken = "9"
hex = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
hyper-util = "0.1"
http-body = "1"
tower = "0.5"
fake = { version = "3", features = ["derive"] }
cron = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
md4 = "0.10"
des = "0.8"
walkdir = "2"
rumqttc = "0.24"
rcgen = "0.13"
time = "0.3"
portable-pty = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
